@@ -139,7 +139,7 @@ VMPK the next time.</p>
 you need virtual cables. In Windows you can use some virtual MIDI cable software, like 
 <a href="http://www.midiox.com/myoke.htm">MIDI Yoke</a>, Maple, 
 <a href="http://www.nerds.de/en/loopbe1.html">LoopBe1</a> or 
-<a href="http://www.sonycreativesoftware.com/dl/dl.aspx?dwnid=77">Sony Virtual MIDI Router</a>. 
+<a href="http://www.sonycreativesoftware.com/dl/dl.aspx?dwnid=77">Sony Virtual MIDI Router</a>.</p>
 
 <p>MIDI Yoke setup process will install the driver and a control panel applet to change the number 
 of MIDI ports that will be available (you need to restart the computer after changing this setting). 
