@@ -2,13 +2,372 @@
 <HTML>
 <HEAD>
     <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
-    <TITLE>Teclado de piano MIDI virtual</TITLE>
+    <TITLE>VMPK. Teclado de piano MIDI virtual</TITLE>
 </HEAD>
 <BODY>
 
 <H1>Teclado de piano MIDI virtual</H1>
 
-<a href="help.html">help.html</a>
+<div id="navcontainer">
+<ul>
+  <li><a href="#Introduction">Introducción</a></li>
+  <li><a href="#Getting_started">Primeros pasos</a>
+    <ul>
+      <li><a href="#MIDI_concepts">Conceptos MIDI</a></li>
+      <li><a href="#maps_instruments">Mapas de teclado y definiciones de instrumentos</a></li>
+      <li><a href="#MIDI_Connections">Conexiones MIDI y cables MIDI virtuales</a></li>
+    </ul>
+  </li>
+  <li><a href="#FAQ">Preguntas frecuentes</a></li>
+  <li><a href="#Download">Descargar</a></li>
+  <li><a href="#Installation">Instalación desde fuentes</a>
+    <ul>
+      <li><a href="#Requirements">Requisitos</a></li>
+      <li><a href="#windows_notes">Notas para usuarios de Windows</a></li>
+      <li><a href="#mac_notes">Notas para usuarios de Mac OSX</a></li>
+      <li><a href="#packager_notes">Notas para empaquetadores y usuarios avanzados</a></li>
+    </ul>
+  </li>
+  <li><a href="#Acknowledgements">Agradecimientos</a></li>
+</ul>
+</div>
+
+<br>
+
+<H2><a name="Introduction"></a>Introducción</H2>
+
+<P>El teclado de piano MIDI virtual (VMPK) es un generador y receptor de eventos MIDI. 
+No produce ningún sonido por si mismo, pero puede ser usado para dirigir un
+sintetizador MIDI (ya sea hardware o software, interno o externo). 
+Puedes usar el teclado de del ordenador para tocar notas MIDI, y también el ratón.
+Puedes usar el teclado de piano MIDI virtual para mostrar las notas tocadas desde
+otro instrumento o reproductor de archivos MIDI. Para ello, conecta el otro puerto
+MIDI al puerto de entrada de VMPK.</P>
+
+<P>VMPK ha sido probado en Linux, Windows y Mac OSX, pero quizá puedas construirlo en
+otros sistemas. En tal caso, por favor envía un mensaje de correo electrónico al autor.</P>
+
+<P>El teclado virtual de Takashi Iway (vkeybd) ha sido la inspiración de este programa.
+Es una pieza de software maravillosa que nos ha servido bien durante muchos años. ¡Gracias!</P>
+
+<P>VMPK utiliza un moderno sistema gráfico: Qt4, que proporciona excelentes características
+y desempeño. <a href="http://www.music.mcgill.ca/~gary/rtmidi/">RtMIDI</a> proporciona las 
+características de entrada y salida MIDI. Ambos sistemas son libres e independientes de la
+plataforma, disponibles para Linux, Windows y Mac OSX.</P>
+
+<P>El mapa del teclado alfanumérico se puede configurar desde dentro del programa usando
+el interfaz gráfico de usuario, y los ajustes se almacenan en archivos XML. Se incluyen algunos 
+mapas para las disposiciones de teclados español, alemán y francés, traducidos desde los 
+archivos correspondientes proporcionados por vkeybd.</P>
+
+<P>VMPK puede transmitir cambios de programa y controladores hacia un sintetizador MIDI. 
+Las definiciones para diferentes estándares y dispositivos pueden ser proporcionadas como
+archivos .INS, el mismo formato  utilizado por QTractor y TSE3. Fue desarrollado por 
+Cakewalk y también se usa en Sonar.</P>
+
+<P>Este software está en una fase alfa temprana. El archivo TODO contiene una lista de 
+características pendientes. Por favor, no dudes en contactar con el autor para hacer
+preguntas, informar de fallos, y proponer nuevas funcionalidades. Puedes usar el 
+sistema de seguimiento en el 
+<A HREF="http://sourceforge.net/tracker2/?group_id=236429">sitio del proyecto de SourceForge</A>.</P>
+<P>Copyright (C) 2008-2009, Pedro Lopez-Cabanillas <B>&lt;plcl AT
+users.sourceforge.net&gt; </B></P>
+<P>Virtual MIDI Piano Keyboard es software libre bajo los términos de la 
+<a href="http://www.gnu.org/copyleft/gpl.html">licencia GPL v3</a>.</P>
+
+<H2><a name="Getting_started"></a>Primeros pasos</H2>
+
+<H3><a name="MIDI_concepts"></a>Conceptos MIDI</H3>
+
+<p> MIDI es un estándar industrial para conectar instrumentos musicales. Se basa en la 
+transmisión de las acciones llevadas a cabo por un músico tocando un instrumento hacia 
+otro instrumento diferente. Los instrumentos musicales habilitados con interfaces MIDI 
+suelen tener dos tomas DIN etiquetadas MIDI IN y MIDI OUT. A veces hay un tercer conector 
+etiquetado MIDI THRU. Para conectar un instrumento MIDI a otro, se necesita un cable MIDI 
+conectado a la toma MIDI OUT del instrumento emisor, y al MIDI IN del receptor. Puede 
+encontrar más información y tutoriales como 
+<a href="http://home.roadrunner.com/~jgglatt/tutr/whatmidi.htm">este</a> por toda la red.</p>
+
+<p>También hay interfaces MIDI hardware para ordenadores, proporcionando puertos MIDI IN y 
+MIDI OUT, en los cuales se pueden conectar cables MIDI para comunicar el ordenador con 
+instrumentos MIDI externos. Sin necesidad de interfaces hardware, el ordenador puede usar
+también software MIDI. Un ejemplo es VMPK, que proporciona puertos MIDI IN y OUT. Puedes 
+conectar cables MIDI virtuales a los puertos de VMPK, para conectar el programa a otros programas
+o a los puertos MIDI físicos del ordenador. Más detalles de esto más tarde. Normalmente
+necesitas conectar la salida MIDI de VMPK a la entrada de algún sintetizador, el cual
+transforma MIDI en sonido. Otro destino habitual de la conexión sería un monitor MIDI que
+traduce los eventos MIDI en texto legible. Esto es una ayuda para entender la clase de 
+información que se transmite usando el protocolo MIDI. En Linux puedes probar <a href="http://kmetronome.sourceforge.net/kmidimon/">KMidimon</a> y en Windows 
+<a href="http://www.midiox.com">MIDIOX</a>.</p>
+
+<p>VMPK no produce ningún sonido. Se necesita un sintetizador MIDI para oír las notas ejecutadas.
+Te recomiendo probar <a href="http://qsynth.sourceforge.net">QSynth</a>,
+un interfaz gráfico para <a href="http://www.fluidsynth.org">Fluidsynth</a>. También es posible
+usar el "Microsoft GS Wavetable SW Synth" que viene con XP. Por supuesto, un sintetizador externo
+MIDI sería una aun mejor solución.</p>
+
+<H3><a name="maps_instruments"></a>Mapas de teclado y definiciones de instrumentos</H3>
+
+<p>VMPK puede ayudarte a cambiar los sonidos en tu sintetizador MIDI, pero solo si antes le proporcionas 
+una definición de los sonidos del sintetizador. Las definiciones son archivos de texto con la 
+extensión .INS, y el mismo formato utilizado por <a href="http://qtractor.sourceforge.net">Qtractor</a> 
+(Linux), y <a href="http://www.cakewalk.com">Sonar</a> (Windows).</p>
+
+<p>Cuando inicies VMPK por primera vez, deberías abrir el diálogo Preferencias eligiendo un fichero 
+de definición, y luego seleccionar el nombre del instrumento entre los proporcionados por el 
+archivo de definiciones. Debería haber un archivo de definiciones de instrumentos instalado en el 
+directorio de datos de VMPK (típicamente "/usr/share/vmpk" en Linux, y "C:\Program Files\VMPK" en Windows) 
+llamado "gmgsxg.ins", que contiene definiciones para los estándares General MIDI, Roland GS y Yamaha XG. 
+Es un formato muy simple, y puedes usar cualquier editor de textos para ver, cambiar y crear uno 
+nuevo. Puedes encontrar una biblioteca de definiciones de instrumentos en el 
+<a href="ftp://ftp.cakewalk.com/pub/InstrumentDefinitions/">servidor FTP de Cakewalk</a>.</p>
+
+<p>Otra personalización que puedes querer realizar es el mapa de teclado. La distribución por
+defecto mapea unas dos octavas y media del teclado alfanumérico QWERTY, pero hay algunas 
+definiciones más en el directorio de datos, adaptadas a otras distribuciones internacionales. 
+Puedes incluso definir tu propia distribución usando el cuadro de diálogo disponible en el menú
+Edición->Mapa de teclado. Hay también opciones para cargar y guardar los mapas como archivos XML.
+El siguiente inicio de VMPK utilizará el último mapa cargado. De hecho, todas las preferencias, los 
+bancos y programas MIDI seleccionados, así como los valores de los controladores serán guardados 
+al finalizar el programa, y recuperados de nuevo al iniciar VMPK en la siguiente ocasión.</p>
+
+<H3><a name="MIDI_Connections"></a>Conexiones MIDI y cables MIDI virtuales</H3>
+
+<p>Para conectar dispositivos MIDI hardware necesitas cables MIDI físicos. Para conectar software
+MIDI necesitas cables virtuales. En windows, puedes usar software que proporciona cables MIDI virtuales, 
+como <a href="http://www.midiox.com/myoke.htm">MIDI Yoke</a>, Maple, 
+<a href="http://www.nerds.de/en/loopbe1.html">LoopBe1</a> o 
+<a href="http://www.sonycreativesoftware.com/dl/dl.aspx?dwnid=77">Sony Virtual MIDI Router</a>.</p>
+
+<p>El proceso de instalación de MIDI Yoke instalará el controlador y un applet en el panel de control 
+para cambiar el número de puertos MIDI que estarán disponibles (es necesario reiniciar el equipo después 
+de cambiar esta configuración). MIDI Yoke funciona enviando cada evento escrito en un puerto de salida al 
+correspondiente puerto de entrada. Por ejemplo, puede conectar la salida de VMPK al puerto 1, y otro programa 
+como <a href="http://qsynth.sourceforge.net">QSynth</a> puede leer los mismos eventos desde el puerto 1.</p>
+
+<p>Utilizando <a href="http://www.midiox.com/moxdown.htm">MIDIOX</a> puedes agregar más rutas entre los puertos 
+de MIDI Yoke y otros puertos MIDI del sistema. Este programa también ofrece otras interesantes funcionalidades, 
+como un reproductor de archivos MIDI. Puedes escuchar canciones que se interpretan en un sintetizador MIDI y al 
+mismo tiempo ver las notas ejecutadas (sólo un canal a la vez) en VMPK. Para ello, puedes utilizar la ventana de 
+"Rutas" en MIDIOX para conectar el puerto de entrada 1 al puerto del sintetizador de Windows. Además, configurar 
+el puerto MIDI del reproductor para enviar a MIDI Yoke 1. Y configurar en VMPK el puerto de entrada para leer 
+desde MIDI Yoke 1. El reproductor enviará los eventos al puerto 1, que serán encaminados al puerto de entrada 1 y, 
+al mismo tiempo, al puerto del sintetizador.</p>
+
+<p>En Linux, tienes el secuenciador de <a href="http://www.alsa-project.org">ALSA</a> que proporciona los
+cables virtuales. Los puertos se crean dinámicamente cuando inicias un programa, de forma que no existe
+un número fijo de ellos como en MIDI Yoke. El programa de línea de mandatos "aconnect" permite conectar y 
+desconectar los cables virtuales entre puertos, ya sean interfaces hardware o aplicaciones. Una utilidad
+gráfica agradable para hacer lo mismo es <a href="http://qjackctl.sourceforge.net">QJackCtl</a>. El propósito
+principal de este programa es controlar el demonio Jack (iniciar, parar y monitorizar su estado). Jack 
+proporciona cables de audio virtuales para conectar los puertos de la tarjeta de sonido y los programas, de 
+una forma similar a los cables MIDI virtuales, pero para datos de audio digital.</p>
+
+<H2><a name="FAQ"></a>Preguntas frecuentes</H2>
+
+<H3>¿Como mostrar 88 teclas?</H3>
+<p>88 es un número arbitrario de teclas usado por la mayor parte de los fabricantes de pianos, pero los fabricantes
+de órganos y sintetizadores no siempre siguen esta convención. VMPK puede ser personalizado para mostrar entre 1 y 
+10 octavas. Usando 7 octavas muestra 84 teclas, y para 8 octavas muestra 98 teclas. No hay forma de mostrar 
+exactamente 7 octavas y cuarto.</p>
+
+<H3>No hay sonido</H3>
+<p>VMPK no produce ningún sonido por si mismo. Necesitas un sintetizador MIDI, y por favor, vuelve a leer la documentación.</p>
+
+<H3>Algunas teclas no suenan</H3>
+<p>Cuando seleccionas el canal 10 en un sintetizador MIDI estándar, ejecuta sonidos de percusión asignados 
+a muchas teclas, pero no a todas. En los canales melódicos (los que no son el 10) puedes seleccionar sonidos 
+con un rango limitado de notas. Esto se conoce en música como 
+<a href="http://es.wikipedia.org/wiki/Tesitura">Tesitura</a>.</p>
+
+<H3>Los nombres de instrumentos no corresponden con los sonidos producidos</H3>
+<p>Se necesita proporcionar un archivo .INS que describa exactamente el conjunto de sonidos del sintetizador, 
+o del soundfont. El archivo incluido (gmgsxg.ins) contiene sólo las definiciones de instrumentos estándar GM, 
+GS y XG. Si tu sintetizador MIDI no coincide exactamente con ninguno de ellos, es necesario obtener otro 
+archivo .INS, o crearlo tu mismo.</p>
+
+<H3>¿Cual es la sintaxis de los archivos de definición de instrumentos (.INS)?</H3>
+<p>Una explicación del formato .INS está <a href="http://tse3.sourceforge.net/doc/InsFiles.html">aquí.</a></p>
+
+<H3>¿Cómo puedo convertir una definición de instrumentos de vkeybd en un archivo .INS?</H3>
+<p>Puedes usar la utilidad sftovkb de vkeybd para crear un archivo .INS desde cualquier soundfont SF2.</p>
+
+<pre>
+$ sftovkb SF2NAME.sf2 | sort -n -k1,1 -k2,2 > SF2NAME.txt
+$ awk -f txt2ins.awk SF2NAME.txt > SF2NAME.ins
+</pre>
+
+<p>Aquí está el guión de AWK "txt2ins.awk":</p>
+
+<pre>
+BEGIN {
+  print ".Controller Names"
+  print "\n[Standard]"
+  print "1=1-Modulation"
+  print "2=2-Breath"
+  print "4=4-Foot controller"
+  print "5=5-Portamento time"
+  print "7=7-Volume"
+  print "8=8-Balance"
+  print "10=10-Pan"
+  print "11=11-Expression"
+  print "64=64-Pedal (sustain)"
+  print "65=65-Portamento"
+  print "66=66-Pedal (sostenuto)"
+  print "67=67-Pedal (soft)"
+  print "69=69-Hold 2"
+  print "91=91-External Effects depth"
+  print "92=92-Tremolo depth"
+  print "93=93-Chorus depth"
+  print "94=94-Celeste (detune) depth"
+  print "95=95-Phaser depth"
+  print "\n.Patch Names"
+  b=""
+}
+{
+  if (b!=$1) {
+     print "\n[Bank" $1 "]"
+     a[$1]=1
+     b=$1
+  }
+  print $2 "=" $3,$4,$5,$6
+}
+END {
+  print "\n.Instrument Definitions"
+  print "\n[" FILENAME "]"
+  print "Control=Standard"
+  for (i in a) {
+    print "Patch[" i "]=Bank" i
+  }
+}
+</pre>
+
+<H2><a name="Download"></a>Descargar</H2>
+<p>Puedes encontrar los últimos fuentes, y paquetes para Windows y Mac OSX en el <A
+HREF="http://sourceforge.net/projects/vmpk">sitio del proyecto en SourceForge</A>.</P>
+<p>También hay paquetes Linux listos para instalar en:
+<ul>
+  <li>openSUSE, del <a href="http://software.opensuse.org/search?baseproject=ALL&amp;p=1&amp;q=vmpk">openSUSE Build Service</a>.</li>
+  <li>Ubuntu: <a href="http://download.tuxfamily.org/ufs/dists/jaunty/main/binary-i386/sound/">i386</a>, <a href="http://download.tuxfamily.org/ufs/dists/jaunty/main/binary-amd64/sound/">amd64</a> por Ubuntu From Scratch.</li>
+  <li><a href="http://aur.archlinux.org/packages.php?ID=20321">Arch Linux</a></li>
+  <li><a href="http://packages.pardus.org.tr/info/contrib-2008/binary/vmpk.html">Pardus</a></li>
+</ul>
+
+<H2><a name="Installation"></a>Instalación desde fuentes</H2>
+
+<P>Descarga los fuentes desde <a href="http://sourceforge.net/projects/vmpk">http://sourceforge.net/projects/vmpk</a>.
+Descomprime los fuentes en el directorio personal, y cambia al directorio descomprimido.</P>
+
+<pre>
+$ cd vmpk-x.y.z
+</pre>
+
+<P>Puedes elegir entre CMake y Qmake para preparar el sistema de compilación, pero qmake está indicado sólamente 
+para pruebas y desarrollo.</P>
+
+<pre>
+$ cmake .
+o bién
+$ ccmake .
+o bién
+$ qmake
+</pre>
+
+<P>Después, compila el programa:</P>
+
+<pre>
+$ make
+</pre>
+#MIDI_concepts
+<P>Si el programa ha sido compilado satisfactoriamente, puedes instalarlo:</P>
+
+<pre>
+$ sudo make install
+</pre>
+
+<H3><a name="Requirements"></a>Requisitos</H3>
+
+<P>Para compilar y usar satisfactoriamente VMPK se necesita Qt 4.3 o posterior.
+(instala el paquete -devel de tu sistema, o bien <a href="ftp://ftp.qtsoftware.com/qt/source">descarga la 
+edición open source</a> desde qtsoftware.com, anteriormente Trolltech.)</P>
+
+<P><a href="http://www.music.mcgill.ca/~gary/rtmidi/">RtMIDI</a> está incluido en el paquete de fuentes. 
+Utiliza el secuenciador ALSA en Linux, WinMM en Windows y CoreMIDI en Mac OSX, que son los sistemas MIDI
+nativos en cada una de las plataformas soportadas.</P>
+
+<P>El sistema de construcción se basa en <a href="http://www.cmake.org">CMake</a>.</P>
+
+<P>Se necesita también el compilador <a href="http://gcc.gnu.org">GCC C++</a>. MinGW es una <a href="http://www.mingw.org">adaptación para Windows</a>.</P>
+
+<P>Opcionalmente, puedes crear un programa de instalación para Windows usando <a href="http://nsis.sourceforge.net">NSIS</a>.</P>
+
+<H3><a name="windows_notes"></a>Notas para usuarios de Windows</H3>
+
+<P>Para compilar los fuentes en Windows, necesitas descargar el archivo .bz2 o bien el .gz 
+y descomprimirlo usando una utilidad que soporte el formato, como por ejemplo 
+<a href="http://www.7-zip.org">7-Zip</a>.</P>
+
+<P>Para configurar los fuentes, se necesita qmake (de Qt4) o CMake. 
+Necesitas establecer el PATH incluyendo los directorios de los binarios de Qt4, los binarios de
+MinGW, y también los binarios de CMake. El programa CMakeSetup.exe es la versión gráfica de 
+CMake para Windows.</P>
+
+<H3><a name="mac_notes"></a>Notas para usuarios de Mac OSX</H3>
+
+<p>Puedes encontrar un paquete precompilado universal, incluyendo las bibliotecas Qt4 de
+tiempo de ejecución en el <a href="http://sourceforge.net/project/showfiles.php?group_id=236429">
+área de descargas del proyecto</a>. Si prefieres la instalación desde fuentes, puedes usar
+CMake o Qmake para construir la aplicación enlazada a las bibliotecas del sistema instaladas.
+Puedes usar Qt4 obtenido desde qtsoftware.com o bien el paquete distribuido por 
+<a href="http://www.finkproject.org/">Fink</a>.</p>
+
+<p>Si necesitas algo que produzca sonido, puede que quieras echar un vistazo a 
+<a href="http://notahat.com/simplesynth">SimpleSynth</a>, o a 
+<a href="http://www.fluidsynth.org/">FluidSynth</a> (disponible desde Fink). 
+para encaminamiento MIDI está <a href="http://notahat.com/midi_patchbay">MIDI Patchbay</a>.</p>
+
+<H3><a name="packager_notes"></a>Notas para empaquetadores y usuarios avanzados</H3>
+
+<p>Puedes pedir al compilador que realice una optimización al construir el programa.
+Hay dos formas: usando un tipo de compilación predefinida.</p>
+
+<pre>
+$ cmake . -DCMAKE_BUILD_TYPE=Release
+</pre>
+
+<p>El tipo "Release" de CMake utiliza las opciones del compilador: "-O3 -DNDEBUG". 
+Otros tipos de compilación predefinidos son "Debug", "RelWithDebInfo", y "MinSizeRel".
+La segunda forma es elegir las opciones del compilador manualmente.</p>
+
+<pre>
+$ export CXXFLAGS="-O2 -march=native -mtune=native -DNDEBUG"
+$ cmake .
+</pre>
+
+<p>Has de determinar las mejores opciones de CXXFLAGS para tu sistema.</p>
+
+<p>Si necesitas instalar el programa en algún otro lugar distinto al predeterminado
+(/usr/local) utiliza la siguiente opción de CMake:</p>
+<pre>
+$ cmake . -DCMAKE_INSTALL_PREFIX=/usr
+</pre>
+
+<p></p>
+
+<H2><a name="Acknowledgements"></a>Agradecimientos</H2>
+
+<P>Adicionalmente a las herramientas anteriormente mencionadas, VMPK utiliza
+partes de los siguientes proyectos de código abierto.</P>
+
+<ul>
+<li>de <a href="http://qtractor.sourceforge.net">Qtractor</a>, por Rui Nuno Capela<br>
+Clases de definición de instrumentos
+<li>de <a href="http://qsynth.sourceforge.net">QSynth</a>, por Rui Nuno Capela<br>
+Botones rotatorios
+<li><a href="http://openclipart.org/media/files/TheresaKnott/346">Icono y logo</a> por Theresa Knott
+</ul>
+
+<P>¡Muchas gracias!</P>
 
 </BODY>
 </HTML>
